MacCatalyst tests crash on NSInternalInconsistencyException, reason: NSApplication has not been created yet https://bugs.webkit.org/show_bug.cgi?id=224606

Reviewed by Wenson Hsieh.

* TestWebKitAPI/Configurations/TestWebKitAPI.xcconfig:
Link UIKitMacHelper in macCatalyst builds.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/ios/UIKitMacHelperSPI.h: Added.
* TestWebKitAPI/ios/mainIOS.mm:
(main):
Call UINSApplicationInstantiate to keep the tests limping along until we create an actual UIApp.

* TestWebKitAPI/Configurations/TestWTF.xcconfig:
Also, fix the TestWTF configuration to not link Cocoa in macCatalyst builds.


Canonical link: https://commits.webkit.org/236808@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276328 268f45cc-cd09-0410-ab3c-d52691b4dbfc